# Dreadstone_Animation_Forge

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: CORE_COMPOUND_EXPORT_CONTRACT.md  DEVELOPMENT.md  DIAGNOSTICS.md  PERFORMANCE_STABILITY_ACCEPTANCE.md  PERFORMANCE_STABILITY_AUDIT.md  RAISED_GORE_EXPORT_CONTRACT.md  RELEASES.md  USER_WORKFLOW_GUIDE.md  VALIDATION_v3.9.1.txt
dreadstone_animation_forge/: __init__.py  blender_manifest.toml  damage_authoring.py  damage_readiness.py  deformation_authoring.py  trauma_field.py
dreadstone_animation_forge/deformation/: __init__.py  capture_service.py  compound_service.py  deformation_service.py  diagnostics.py  gore_service.py  mesh_snapshot.py  models.py  pair_sync_service.py  performance.py  preview_service.py  registry.py  serialization.py  shape_keys.py  transactions.py  validation_service.py
scripts/: build_release.py  validate_addon.py
tests/: blender_atomic_damage_preview_acceptance.py  blender_build_technical_core_compound_fixture.py  blender_core_compound_guard_acceptance.py  blender_gore_v3_acceptance.py  blender_healing_workflow_acceptance.py  blender_performance_acceptance.py  blender_raised_gore_acceptance.py  blender_release_zip_smoke.py  blender_stamp_library_acceptance.py  blender_stamp_source_recovery_acceptance.py  test_core_compound.py  test_damage_preview_lifecycle.py  test_healing_architecture.py  test_raised_gore.py  test_source_readiness_contract.py  test_static_contracts.py  test_trauma_field.py
(+14 files in other folders)
